# gb_pychat

./: .gitignore  README.md  alembic.ini  client.py  client.pyw  config.py  generate_python_ui.sh  generate_server_ui.sh  launcher.py  pyproject.toml  server.py  server.pyw
client/: Makefile  application.py  client.pyw  config.py  generate_client_ui.sh  messages.py  model.py  pyproject.toml  setup.py  storage.py  transport.py
client/docs/source/: _client pkg.rst  _client.rst  index.rst
client/tests/: test_jim_client.py
common/: __init__.py  base.py  config.py  decorators.py  jim_protocol.py  meta.py
common/jim_protocol/: __init__.py  errors.py  jim_base.py  jim_client.py  jim_server.py
data/: message_queue_dump.json
docs/source/: _launcher.rst  conf.py  index.rst
exercises/: 1_encoding.py  lesson09.py
exercises/2_file_data_store/: 1_csv.py  2_json.py  (+3 more)
gui_client/: application.py  client_gui.ui  main_window.py
gui_server/: application.py  clients_window.py  history_window.py  main_window.py  server_gui.ui
jim/: base.py  client.py  client_messages.py  client_model.py  client_storage.py  decorators.py  descriptors.py  schema.py  server.py  server_model.py  server_storage.py
log/: client_log_config.py  decorator.py  server_log_config.py
logger/: client_log_config.py  server_log_config.py
logs/: client.calls.log.1  client.calls.log.2  server.calls.log.1  server.calls.log.2
migrations/: env.py
server/: Makefile  application.py  config.py  model.py  pyproject.toml  setup.py  storage.py  transport.py
tests/: test_jim_client.py  test_jim_server.py
(+8 files in other folders)
