[tool.poetry]
name = "gb_pychat"
version = "0.1.0"
description = ""
authors = ["DashViolin <mymail@srv.org>"]

[tool.poetry.dependencies]
python = "^3.10"
chardet = "^5.0.0"
PyYAML = "^6.0"
tabulate = "^0.9.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
