[tool.poetry]
name = "gb_pychat_client"
version = "0.1.0"
description = ""
authors = ["DashViolin <mymail@srv.org>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.44"
PyQt6 = "^6.4.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
cx-Freeze = "^6.13.1"
isort = "^5.10.1"
black = "^22.3.0"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
